<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141726"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:contentDescription="@string/enverone_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enverone2__141726" />

    <TextView
        android:id="@+id/Tagline"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/act_before_it_s_too_late"
        android:textColor="#f2ddb6"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#83a637"
        android:text="Go Cleaner"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#83a637"
        android:text="Go Greener"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="621dp"
        android:layout_height="358dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/hello_world_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="#f2ddb6"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/greens"
                android:textColor="#f2ddb6"
                android:textSize="48sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/fivelines"
            android:layout_width="230dp"
            android:layout_height="205dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#f2ddb6"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_linkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getting_started"
        android:textColor="#f2ddb6"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>

